--- a/styles/style.css
+++ b/styles/style.css
@@ -1,46 +1,58 @@
+:root {
+  --nav-backround-green: #425230;
+  --nav-dark-black: #14190a;
+  --nav-hover-text: #e4e5d8;
+  --white-color: #ffffff;
+  --background-body-offwhite: #fcfbf5;
+  --dark-grey: #787c70;
+  --medium-grey: #c9c9c0;
+  --light-grey: #ddded7;
+  --footer-background-green: #3c4230;
+}
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    height: 100vh;
+  height: 100vh;
 }
 
 body {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .header {
-    background-color: coral;
+  background-color: coral;
 }
 
 .banner {
-    background-color: black;
-    color: antiquewhite;
+  background-color: black;
+  color: antiquewhite;
 }
 
 .main-div {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .main {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
 }
 
 .sidebar {
-    background-color: aqua;
+  background-color: aqua;
 }
 
 .main-content {
-    background-color: rgb(245, 129, 255);
-    width: 100%;
+  background-color: rgb(245, 129, 255);
+  width: 100%;
 }
 
 .footer {
-    background-color: coral;
+  background-color: coral;
 }
