--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,24 @@ body {
 }
 
 .sidebar {
-  background-color: aqua;
+  background-color: var(--medium-grey);
+  padding: 10px 0 10px 0;
+}
+
+.sidebar-title {
+  margin: 0;
+}
+
+.sidebar-button {
+  background-color: var(--dark-grey);
+  color: var(--white-color);
+  padding: 5px;
+  margin: 5px 0 5px 0;
+}
+
+.sidebar-button:hover {
+  background-color: var(--background-body-offwhite);
+  color: var(--nav-dark-black);
 }
 
 .main-content {
