--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,24 @@ body {
 
 .navbar a:hover {
   color: #14190a;
+  background-color: var(--nav-backround-green);
+  padding: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbar a {
+  color: var(--white-color);
+  text-decoration: none;
+  border: none;
+  padding: 0.85rem;
+  font-size: 1.2rem;
+  border-radius: 8px;
+}
+
+.navbar a:hover {
+  color: #14190a;
+  background-color: var(--nav-hover-text);
 }
 
 .banner {
