--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,12 @@ body {
   min-height: 100%;
 }
 
+.logo img {
+  height: 60px;
+  transform: scale(1.3);
+  transform-origin: left center;
+}
+
 .header {
   background-color: var(--nav-backround-green);
   padding: 1.5rem;
@@ -38,17 +44,32 @@ body {
   color: var(--white-color);
   text-decoration: none;
   border: none;
-  padding: 1rem;
+  padding: 0.85rem;
   font-size: 1.2rem;
+  border-radius: 8px;
 }
 
 .navbar a:hover {
   color: #14190a;
+  background-color: var(--nav-hover-text);
 }
 
 .banner {
-  background-color: black;
+  /* //background-color: black; */
+  position: relative;
   color: antiquewhite;
+  width: 100%;
+  height: 60vh;
+}
+
+.bg_video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
 }
 
 .main-div {
@@ -62,7 +83,24 @@ body {
 }
 
 .sidebar {
-  background-color: aqua;
+  background-color: var(--medium-grey);
+  padding: 10px 0 10px 0;
+}
+
+.sidebar-title {
+  margin: 0;
+}
+
+.sidebar-button {
+  background-color: var(--dark-grey);
+  color: var(--white-color);
+  padding: 5px;
+  margin: 5px 0 5px 0;
+}
+
+.sidebar-button:hover {
+  background-color: var(--background-body-offwhite);
+  color: var(--nav-dark-black);
 }
 
 .main-content {
@@ -71,5 +109,69 @@ body {
 }
 
 .footer {
-  background-color: coral;
+  background-color: var(--footer-background-green);
+  color: var(--nav-hover-text);
+  padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 1rem;
+  flex-direction: column;
+  gap: 1.5;
+  text-align: center;
+}
+
+.footer-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+}
+
+.footer-logo-title {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.footer-logo-title img {
+  height: 40px;
+  width: auto;
+}
+
+.footer-div h4 {
+  margin-bottom: 0.5rem;
+}
+
+.footer-div p {
+  line-height: 1.4;
+  font-size: 0.85rem;
+  text-align: left;
+}
+
+.footer-copyright {
+  flex-basis: 100%;
+  text-align: center;
+  border-top: 1px solid var(--medium-grey);
+  font-size: 0.85rem;
+  padding-top: 1rem;
+}
+
+
+@media (min-width: 768px) {
+  .footer {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: left;
+  }
+
+  .footer-div {
+    align-items: flex-start;
+    flex: 1;
+  }
+
+  .footer-div p {
+    text-align: left;
+  }
 }
