--- a/styles/mammals.css
+++ b/styles/mammals.css
@@ -22,9 +22,10 @@ html {
 }
 
 body {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: 100vh;
   background-color: var(--background-body-offwhite);
 }
 
@@ -50,16 +51,15 @@ body {
 }
 
 .banner {
-  min-width:100%;
-  height: 60vh;
-  background-image: url('../images/echidna-banner.jpg');
+  min-width: 100%;
+  min-height: 60vmin;
+  max-height: 300px;
+  overflow: hidden;
+  background-image: url("../images/echidna-banner.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   object-fit: cover;
-  
 }
-
-
 
 .main-div {
   flex-grow: 1;
@@ -68,25 +68,23 @@ body {
 .main {
   display: flex;
   flex-direction: row;
-  height: 100%;
+  /* height: 100%; */
 }
 
-.img{
-
+.img {
   width: 40%;
   height: 30vh;
   border-radius: 10px;
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 .sidebar {
   background-color: var(--medium-grey);
   padding: 10px 0 10px 0;
   text-align: center;
-  
+  height: 100vh;
 }
 
 .h2 {
@@ -112,41 +110,53 @@ body {
   text-align: center;
 
   width: 100%;
-  height: 40vh;
+  height: 100vh;
   padding: 1rem;
 }
 
-.mammalsAbout{
-
+.mammalsAbout {
   color: var(--nav-dark-black);
   text-align: left;
   padding: 1rem;
 }
 
-.mammalsHeader{
+.display {
+  display: block;
+}
 
+.button {
+  background-color: var(--nav-backround-green);
+  color: var(--nav-hover-text);
+  padding: 0.65rem;
+  margin: 1rem;
+  border-radius: 8px;
+  border: none;
+}
+
+.hide {
+  display: none;
+}
+
+.mammalsHeader {
   padding: 1rem;
   font-size: 1.2rem;
-  text-align:left;
+  text-align: left;
   color: var(--nav-dark-black);
 }
 
 .footer {
   background-color: coral;
+  padding: 2rem;
 }
 
-.mammals_arr{
-
+.mammals_arr {
   display: flex;
   flex-direction: column;
   color: var(--white-color);
   background: var(--dark-grey);
 }
 
-.mammal{
-
+.mammal {
   background-color: var(--dark-grey);
   color: var(--white-color);
 }
-
-
