--- a/styles/style.css
+++ b/styles/style.css
@@ -55,12 +55,12 @@ body {
 }
 
 .banner {
-  /* //background-color: black; */
   position: relative;
   color: antiquewhite;
   width: 100%;
   height: 60vh;
 }
+
 
 .bg_video {
   position: absolute;
@@ -85,6 +85,7 @@ body {
 .sidebar {
   background-color: var(--medium-grey);
   padding: 10px 0 10px 0;
+  display: none;
 }
 
 .sidebar-title {
@@ -104,8 +105,13 @@ body {
 }
 
 .main-content {
-  background-color: rgb(245, 129, 255);
+  background-color: var(--background-body-offwhite);
+  text-align: center;
   width: 100%;
+  padding: 25px 30px;
+}
+.main-paragraph{
+  padding: 50% 0;
 }
 
 .footer {
