added media tag for max-width 768px

--- a/styles/style.css
+++ b/styles/style.css
@@ -82,36 +82,15 @@ body {
   height: 100%;
 }
 
-.sidebar {
-  background-color: var(--medium-grey);
-  padding: 10px 0 10px 0;
-  display: none;
-}
-
-.sidebar-title {
-  margin: 0;
-}
-
-.sidebar-button {
-  background-color: var(--dark-grey);
-  color: var(--white-color);
-  padding: 5px;
-  margin: 5px 0 5px 0;
-}
-
-.sidebar-button:hover {
-  background-color: var(--background-body-offwhite);
-  color: var(--nav-dark-black);
-}
-
 .main-content {
   background-color: var(--background-body-offwhite);
   text-align: center;
   width: 100%;
   padding: 25px 30px;
 }
-.main-paragraph{
-  padding: 50% 0;
+
+.main-paragraph {
+  padding: 5% 20%;
 }
 
 .footer {
@@ -164,7 +143,34 @@ body {
 }
 
 
-@media (min-width: 768px) {
+@media (max-width:768px) {
+  .sidebar {
+    display: none;
+  }
+}
+
+@media (min-width: 769px) {
+  .sidebar {
+    background-color: var(--medium-grey);
+    padding: 10px 0 10px 0;
+  }
+
+  .sidebar-title {
+    margin: 0;
+  }
+
+  .sidebar-button {
+    background-color: var(--dark-grey);
+    color: var(--white-color);
+    padding: 5px;
+    margin: 5px 0 5px 0;
+  }
+
+  .sidebar-button:hover {
+    background-color: var(--background-body-offwhite);
+    color: var(--nav-dark-black);
+  }
+
   .footer {
     flex-direction: row;
     flex-wrap: wrap;
