js updates and centering welcome text

--- a/styles/birds.css
+++ b/styles/birds.css
@@ -11,3 +11,32 @@
     background-color: var(--background-body-offwhite);
     color: var(--nav-dark-black);
 }
+
+.bird-container {
+    background-color: var();
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* yatay ortalama */
+    text-align: center;
+    /* yazıları ortalar */
+    padding: 20px;
+
+}
+
+.main-content p {
+    max-width: 600px;
+    /* paragraf uzunluğunu kontrol eder */
+    line-height: 1.6;
+    /* okunabilirlik */
+    margin: 10px 0;
+    /* dikey boşluk */
+    font-size: 1rem;
+
+}
