--- a/styles/mammals.css
+++ b/styles/mammals.css
@@ -104,7 +104,7 @@ body {
   color: var(--nav-dark-black);
 }
 
-.main-content {
+.main_content {
   background-color: var(--light-grey);
   border: transparent;
   text-align: center;
@@ -114,7 +114,7 @@ body {
   padding: 1rem;
 }
 
-.mammalsAbout {
+.mammals_about {
   color: var(--nav-dark-black);
   text-align: left;
   padding: 1rem;
@@ -137,7 +137,14 @@ body {
   display: none;
 }
 
-.mammalsHeader {
+.show{
+
+  display: block;
+}
+
+
+
+.mammals_header {
   padding: 1rem;
   font-size: 1.2rem;
   text-align: left;
