--- a/styles/mammals.css
+++ b/styles/mammals.css
@@ -59,6 +59,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   object-fit: cover;
+  background-position: center;
 }
 
 .main-div {
@@ -112,6 +113,18 @@ body {
   width: 100%;
   height: 100vh;
   padding: 1rem;
+}
+
+.display_content{
+
+  background-color: var(--light-grey);
+  border: transparent;
+  text-align: center;
+
+  width: 100%;
+  height: 100vh;
+  padding: 1rem;
+
 }
 
 .mammals_about {
