--- a/styles/style.css
+++ b/styles/style.css
@@ -159,18 +159,42 @@ body {
     height: 100vh;
     width: 240px;
     background-color: var(--medium-grey);
-    padding: 20px;
     transform: translateX(-100%);
-    transition: transform 0.3s ease;
-    z-index: 1000;
+    z-index: 100;
+  }
+
+  .sidebar-button {
+    background-color: var(--dark-grey);
+    padding: 5px;
+    margin: 10px 0;
+    color: var(--white-color);
+    font-size: x-large;
   }
 
   .sidebar-menu-icon {
     display: block;
+    padding-top: 10px;
+    background-color: var(--background-body-offwhite);
   }
 
   .sidebar.show {
     transform: translateX(0);
+    transition: transform 0.3s ease;
+  }
+
+  .sidebar.close {
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+  }
+
+  .sidebar-title {
+    font-size: x-large;
+    text-align: center;
+    padding-top: 5px;
+  }
+
+  .close-button {
+    text-align: end;
   }
 
   .fa-bars {
@@ -179,16 +203,20 @@ body {
   }
 }
 
-/*Big screen*/
 @media (min-width: 769px) {
   .sidebar-menu-icon {
     display: none;
   }
 
+  .close-button {
+    display: none;
+  }
+
   .sidebar {
     background-color: var(--medium-grey);
+    width: 20%;
     padding: 10px 0 10px 0;
-    font-size: x-large;
+    font-size: large;
   }
 
   .sidebar-title {
