--- a/styles/mammals.css
+++ b/styles/mammals.css
@@ -69,23 +69,20 @@ body {
 .main {
   display: flex;
   flex-direction: row;
-  /* height: 100%; */
 }
 
 .img {
-  width: 40%;
-  height: 30vh;
-  border-radius: 10px;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 10px;
+  width: 200px;
+  border-radius: 15px;
+  border: 1px solid var(--dark-grey);
 }
 
 .sidebar {
   background-color: var(--medium-grey);
+  width: 20%;
   padding: 10px 0 10px 0;
-  text-align: center;
-  height: 100vh;
+  font-size: 1rem;
 }
 
 .h2 {
@@ -98,6 +95,7 @@ body {
   color: var(--white-color);
   padding: 5px;
   margin: 5px 0 5px 0;
+  text-align: center;
 }
 
 .el:hover {
@@ -109,32 +107,23 @@ body {
   background-color: var(--light-grey);
   border: transparent;
   text-align: center;
-
   width: 100%;
   height: 100vh;
   padding: 1rem;
 }
 
-.display_content{
-
-  background-color: var(--light-grey);
-  border: transparent;
-  text-align: center;
-
+.display {
   width: 100%;
-  height: 100vh;
-  padding: 1rem;
-
+  padding: 25px 30px;
+  text-align: center;
+  background-color: var(--light-grey);
 }
 
 .mammals_about {
   color: var(--nav-dark-black);
   text-align: left;
   padding: 1rem;
-}
-
-.display {
-  display: block;
+  text-align: center;
 }
 
 .button {
@@ -144,23 +133,22 @@ body {
   margin: 1rem;
   border-radius: 8px;
   border: none;
+  text-align: center;
 }
 
 .hide {
   display: none;
 }
 
-.show{
-
+.show {
   display: block;
 }
-
-
 
 .mammals_header {
   padding: 1rem;
   font-size: 1.2rem;
-  text-align: left;
+  text-align: center;
+
   color: var(--nav-dark-black);
 }
 
