--- a/styles/reptiles.css
+++ b/styles/reptiles.css
@@ -18,6 +18,7 @@
   margin: 0 auto 24px;
   border-radius: 8px;
   object-fit: cover;
+  box-shadow: 0 2px 10px var(--dark-grey)
 }
 
 .main-content {
@@ -32,7 +33,7 @@
 @media (min-width: 768px) {
   .main-content img {
     width: 100%;
-    max-width: 40%;
+    max-width: 300px;
   }
 
 }
