--- a/styles/reptiles.css
+++ b/styles/reptiles.css
@@ -13,7 +13,7 @@
 
 .main-content img {
   width: 100%;
-  max-width: 300px;
+  max-width: 200px;
   display: block;
   margin: 0 auto 24px;
   border-radius: 8px;
@@ -22,6 +22,12 @@
 }
 
 .main-content {
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.default-message {
+  max-width: 50%;
   text-align: center;
 }
 
