--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,12 @@ body {
   transform-origin: left center;
 }
 
+.logo img {
+  height: 60px;
+  transform: scale(1.3);
+  transform-origin: left center;
+}
+
 .header {
   background-color: var(--nav-background-green);
   padding: 1.5rem;
@@ -44,7 +50,7 @@ body {
   color: var(--white-color);
   text-decoration: none;
   border: none;
-  padding: 0.85rem;
+  padding: 0.85rem 1.2rem;
   font-size: 1.2rem;
   border-radius: 8px;
 }
@@ -88,7 +94,6 @@ body {
 .main {
   display: flex;
   flex-direction: row;
-  height: 100%;
 }
 
 .sidebar {
@@ -115,6 +120,7 @@ body {
 .main-content {
   background-color: var(--background-body-offwhite);
   width: 100%;
+  min-height: 100vh;
 }
 
 .footer {
