--- a/styles/style.css
+++ b/styles/style.css
@@ -204,6 +204,13 @@ body {
     font-size: large;
   }
 
+  .sidebar-home {
+    background-color: var(--medium-grey);
+    width: 20%;
+    padding: 10px 0 10px 0;
+    font-size: large;
+  }
+
   .sidebar-title {
     margin: 0;
   }
@@ -285,6 +292,10 @@ body {
   }
 
   .sidebar {
+    background-color: var(--medium-grey);
+  }
+
+  .sidebar-home {
     position: fixed;
     top: 0;
     left: 0;
@@ -309,7 +320,7 @@ body {
     background-color: var(--background-body-offwhite);
   }
 
-  .sidebar.show {
+  .sidebar-home.show {
     transform: translateX(0);
     transition: transform 0.3s ease;
   }
