--- a/styles/style.css
+++ b/styles/style.css
@@ -112,7 +112,7 @@ body {
   margin: 10px;
   width: 200px;
   border-radius: 15px;
-  border: 1px solid var(--dark-grey);
+  box-shadow: 0 2px 10px var(--dark-grey)
 }
 
 .footer {
