--- a/styles/reptiles.css
+++ b/styles/reptiles.css
@@ -11,6 +11,13 @@
   text-align: center;
 }
 
+.sidebar-title {
+  color: inherit;
+  text-decoration: none;
+  padding: 5px;
+  margin: 5px 0 5px 0;
+}
+
 .main-content img {
   width: 100%;
   max-width: 200px;
@@ -18,7 +25,7 @@
   margin: 0 auto 24px;
   border-radius: 8px;
   object-fit: cover;
-  box-shadow: 0 2px 10px var(--dark-grey)
+  box-shadow: 0 2px 10px var(--dark-grey);
 }
 
 .main-content {
