--- a/styles/reptiles.css
+++ b/styles/reptiles.css
@@ -22,7 +22,7 @@
   width: 100%;
   max-width: 200px;
   display: block;
-  margin: 0 auto 24px;
+  margin: 0 auto 48px;
   border-radius: 8px;
   object-fit: cover;
   box-shadow: 0 2px 10px var(--dark-grey);
@@ -30,11 +30,18 @@
 
 .main-content {
   text-align: center;
+  padding: 40px;
+  border-radius: 12px;
+  max-width: 900px;
+  margin: 20px auto;
+}
+
+.main-content h2 {
   margin-bottom: 24px;
 }
 
 .default-message {
-  max-width: 65%;
+  padding: 24px;
   text-align: center;
   margin: 0 auto;
 }
@@ -44,6 +51,22 @@
   font-weight: bold;
 }
 
+.read-more-button {
+  color: #ddded7;
+  background-color: #787c70;
+  padding: 8px;
+  font-size: medium;
+  border-radius: 8px;
+  border: none;
+  margin-top: 24px;
+  cursor: pointer;
+}
+
+.read-more-button:hover {
+  color: #787c70;
+  background-color: #ddded7;
+}
+
 @media (min-width: 768px) {
   .main-content img {
     width: 100%;
@@ -51,6 +74,9 @@
   }
 
   .default-message {
-    max-width: 50%;
+    padding: 40px;
+    border-radius: 12px;
+    max-width: 900px;
+    margin: 20px auto;
   }
 }
