--- a/styles/mammals.css
+++ b/styles/mammals.css
@@ -179,5 +179,44 @@ body {
 .sidebar{
 
   width: 44%;
+
 }
+
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 30%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    transition: right 0.3s ease;
+    z-index: 1000;
+    will-change: transform;
+    background-color: var(--nav-hover-text);
+  }
+
+  .header {
+    padding: 3rem;
+  }
+
+  .ham_menu {
+    display: block;
+    position: absolute;
+    right: 2rem;
+  }
+
+  .navbar a {
+    font-size: 0.5rem;
+    color: var(--nav-dark-black);
+    font-size: 1rem;
+  }
+
+  .navbar.show {
+    transform: translateX(0);
+  }
 }
+
+
