--- a/styles/about.css
+++ b/styles/about.css
@@ -11,7 +11,7 @@
 }
 
 .banner-members {
-    background-image: url(../images/cassowary-banner.jpg);
+    background-image: url(../images/birds_page_banner4.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -28,10 +28,11 @@
     display: flex;
     height: auto;
     width: 400px;
-    background-color: var(--medium-grey);
+    background-color: #e2e7c9;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 10px;
 }
 
 .main-content {
@@ -47,7 +48,13 @@
     max-width: 600px;
     line-height: 1.6;
     margin: 10px 0;
-    font-size: 1rem;
+    font-size: 1.5rem;
+    color: #425230;
+    padding: 20px;
+}
+
+h2 {
+    color: #3c4230;
 }
 
 .member-image {
@@ -58,6 +65,38 @@
     border-radius: 15px;
     box-shadow: 0 2px 10px var(--dark-grey)
 }
+
+.fade-in {
+    opacity: 0;
+    animation:
+        fadeIn 1s ease-in-out forwards,
+        scalePop 1s ease-out forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes scalePop {
+    0% {
+        transform: scale(0.95);
+    }
+
+    60% {
+        transform: scale(1.05);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
 
 @media (max-width: 480px) {
     .member-image {
