width added  main-content

--- a/styles/about.css
+++ b/styles/about.css
@@ -24,12 +24,11 @@
 }
 
 .main-content {
-
+    width: 100%;
     background-image: url('../images/aboutBackground.png');
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
-
     display: flex;
     flex-direction: column;
     align-items: center;
