--- a/styles/about.css
+++ b/styles/about.css
@@ -15,7 +15,7 @@
 .member-container {
     display: flex;
     height: auto;
-    width: 400px;
+    width: 70%;
     background-color: #e2e7c9;
     display: flex;
     flex-direction: column;
@@ -41,7 +41,7 @@
     max-width: 600px;
     line-height: 1.6;
     margin: 10px 0;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: var(--nav-dark-black);
     padding: 20px;
 }
@@ -52,7 +52,7 @@ h2 {
 
 .member-image {
     width: 100%;
-    max-width: 300px;
+    max-width: 200px;
     height: auto;
     object-fit: cover;
     border-radius: 15px;
