changed the hover color in the side bar

--- a/styles/reptiles.css
+++ b/styles/reptiles.css
@@ -46,7 +46,8 @@
 }
 
 .sidebar-button.active {
-  background-color: #425230;
+  background-color: var(--background-body-offwhite);
+  color: var(--nav-dark-black);
   font-weight: bold;
 }
 
