Did all the fixes needed to make the webpage work correctly

--- a/styles/mammals.css
+++ b/styles/mammals.css
@@ -87,7 +87,7 @@
 
 .button:hover{
 
-  background-color: var(--nav-backround-green);
+  background-color: var(--nav-background-green);
 }
 
 .hide {
