--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family:"Comic Sans MS", "Comic Sans", cursive;
+ font-family: "Comic Neue", cursive;
 }
 
 html {
