--- a/styles/style.css
+++ b/styles/style.css
@@ -19,12 +19,16 @@
 
 html {
   height: 100vh;
+  overflow-x: hidden;
+
 }
 
 body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
+
 }
 
 .logo img {
@@ -255,14 +259,23 @@ body {
     top: 0;
     right: 0;
     transform: translateX(100%);
-    transition: right 0.3s ease;
+    transition: transform 0.3s ease;
     z-index: 1000;
     will-change: transform;
     background-color: var(--nav-hover-text);
   }
 
   .header {
-    padding: 3rem;
+    padding: 1.5rem;
+  }
+
+  .logo img {
+    transform: scale(1);
+  }
+
+  .banner{
+
+    overflow: hidden;
   }
 
   .ham_menu {
