--- a/styles/mammals.css
+++ b/styles/mammals.css
@@ -1,37 +1,18 @@
-
 .banner {
   min-width: 100%;
-  min-height: 60vmin;
+  min-height: 60%;
   max-height: 300px;
-  overflow: hidden;
   background-image: url("../images/echidna-banner.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  object-fit: cover;
   background-position: center;
-}
-
-.main-div {
-  flex-grow: 1;
-}
-
-.main {
-  display: flex;
-  flex-direction: row;
 }
 
 .img {
   margin: 10px;
-  width: 200px;
+  width: 150px;
   border-radius: 15px;
-  border: 1px solid var(--dark-grey);
-}
-
-.sidebar {
-  background-color: var(--medium-grey);
-  width: 20%;
-  padding: 10px 0 10px 0;
-  font-size: 1rem;
+  box-shadow: 0 2px 10px var(--dark-grey)
 }
 
 .h2 {
@@ -44,7 +25,7 @@
   color: var(--white-color);
   padding: 5px;
   margin: 5px 0 5px 0;
-  text-align: le;
+  text-align: left;
 }
 
 .el:hover {
@@ -52,20 +33,10 @@
   color: var(--nav-dark-black);
 }
 
-.main_content {
-  background-color: var(--light-grey);
-  border: transparent;
-  text-align: center;
-  width: 100%;
-  height: 100vh;
-  padding: 1rem;
-}
-
 .display {
   width: 100%;
   padding: 25px 30px;
   text-align: center;
-  background-color: var(--light-grey);
 }
 
 .mammals_about {
@@ -85,7 +56,7 @@
   text-align: center;
 }
 
-.button:hover{
+.button:hover {
 
   background-color: var(--nav-background-green);
 }
@@ -125,13 +96,11 @@
 
 @media (max-width:768px) {
 
-.sidebar{
+  .sidebar {
 
-  width: 44%;
+    width: 44%;
+
+  }
+
 
 }
-
-  
-}
-
-
