--- a/styles/mammals.css
+++ b/styles/mammals.css
@@ -10,7 +10,7 @@
 
 .img {
   margin: 10px;
-  width: 150px;
+  width: 200px;
   border-radius: 15px;
   box-shadow: 0 2px 10px var(--dark-grey)
 }
@@ -39,6 +39,15 @@
   text-align: center;
 }
 
+.main_content {
+  background-color: var(--background-body-offwhite);
+  border: transparent;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
+  padding: 1rem;
+}
+
 .mammals_about {
   color: var(--nav-dark-black);
   text-align: left;
@@ -57,7 +66,6 @@
 }
 
 .button:hover {
-
   background-color: var(--nav-background-green);
 }
 
@@ -73,7 +81,6 @@
   padding: 1rem;
   font-size: 1.2rem;
   text-align: center;
-
   color: var(--nav-dark-black);
 }
 
@@ -95,12 +102,14 @@
 }
 
 @media (max-width:768px) {
-
   .sidebar {
-
     width: 44%;
-
   }
 
-
+  .img {
+    margin: 10px;
+    width: 150px;
+    border-radius: 15px;
+    box-shadow: 0 2px 10px var(--dark-grey)
+  }
 }
