--- a/styles/birds.css
+++ b/styles/birds.css
@@ -56,3 +56,9 @@
     border-radius: 15px;
     box-shadow: 0 2px 10px var(--dark-grey)
 }
+
+@media screen and (max-width: 768px) {
+    .bird-image {
+        width: 150px;
+    }
+}
